# ch347-nor-prog

./: CMakeLists.txt  README.md  ch347.c  ch347.h  main.cpp  misc.cpp  spi-op.cpp  spi-op.h  spi_flash.cpp  spi_flash.h  spi_ids.cpp  stdafx.cpp  stdafx.h  targetver.h
